# qbirthday

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  Changelog  Makefile  README  README.rst  TODO  gbirthday.desktop  gbirthday.desktop.in  gbirthday.py  gbirthday.spec  install.sh  pylint  pylintrc  pyproject.toml  qbirthday.desktop.in  qbirthday.pro  setup.cfg  setup.py  uninstall.sh
.tx/: config
i18n/: qbirthday_fr.qm  qbirthday_fr.ts
languages/: de.lang  en.lang  es.lang  es_AR.lang  es_ES.lang  fr.lang  gl.lang  it.lang  pt.lang  sk.lang
po/: .gitignore  POTFILES.in  cs.po  da.po  de.po  en.po  es.po  fi.po  fr.po  gbirthday.pot  gl.po  he.po  install_po.py  it.po  pl.po  pt.po  qbirthday.pot  ru.po  sk.po
src/: gb  gbirthday.py  qb
src/gbirthday/: __about__.py  __init__.py  aboutdialog.py  addressbook.py  databases.py  gtk_funcs.py  main_window.py  mainwindow.py  preferences_dialog.py  preferencesdialog.py  settings.py  status_icon.py  statusicon.py  test_addressbook.py  test_conf.py  test_databases.py
src/gbirthday/databases/: __init__.py  csv.py  evolution.py  lightning.py  mysql.py  sunbird.py
src/gbirthday/ui/: aboutdialog.ui  add.ui  icsexportpreferencesdialog.ui  mainwindow.ui  mysqlpreferencesdialog.ui  preferences_dialog.ui
src/qbirthday/: __about__.py  __init__.py  aboutdialog.py  addressbook.py  birthday_list.py  exceptions.py  ics_export.py  mainwindow.py  paths.py  preferencesdialog.py  settings.py  statusicon.py
src/qbirthday/backends/: __init__.py  base.py  csv.py  exceptions.py  lightning.py  mysql.py  sunbird.py
src/qbirthday/databases/: __init__.py  csv.py  lightning.py  (+2 more)
src/tests/: __init__.py  test_addressbook.py
(+9 files in other folders)
